lax/the-platform/0010-ok/40-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: the-platform
  name: ok
  labels:
    app: ok
spec:
  replicas: 2
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: ok
  template:
    metadata:
      labels:
        app: ok
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - ok
                topologyKey: kubernetes.io/hostname
      containers:
        - name: ok
          image: apk8s/ok:v0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-ok
              containerPort: 8080
            - name: http-metrics
              containerPort: 2112
