lax/the-platform/0010-ok/10-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ok
  namespace: the-platform
  labels:
    app: ok
spec:
  selector:
    app: ok
  ports:
    - name: http-ok
      protocol: "TCP"
      port: 8080
      targetPort: 8080
  type: ClusterIP
